source/y.output
Terminals unused in grammar

   SPDOT
   KEYGETINT
   KEYGETCHAR
   KEYGETARRAY
   KEYPUTINT
   KEYPUTCHAR
   KEYPUTARRAY
   KEYPUTF
   KEYSTOPTIME
   KEYSTARTTIME


Grammar

    0 $accept: Compiler $end

    1 Compiler: CompUnits

    2 CompUnits: %empty
    3          | CompUnit CompUnits

    4 CompUnit: Decl
    5         | TYPEVOID IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block
    6         | TYPEINTEGER IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block

    7 FuncFParam: TYPEINTEGER IDENTIFIER
    8           | TYPEINTEGER IDENTIFIER OPLEFTBRACKET OPRIGHTBRACKET ArrayExps

    9 FuncFParams: FuncFParam
   10            | FuncFParam SPCOMMA FuncFParams
   11            | %empty

   12 Decl: KEYCONST TYPEINTEGER ConstDef ConstDefs SPSEMICOLON
   13     | TYPEINTEGER VarDef VarDefs SPSEMICOLON

   14 ConstDefs: %empty
   15          | SPCOMMA ConstDef ConstDefs

   16 ConstDef: VarDec OPASSIGN InitVal

   17 VarDec: IDENTIFIER
   18       | VarDec OPLEFTBRACKET Exp OPRIGHTBRACKET

   19 VarDef: VarDec
   20       | VarDec OPASSIGN InitVal

   21 VarDefs: %empty
   22        | SPCOMMA VarDef VarDefs

   23 InitVal: Exp
   24        | SPLEFTBRACE SPRIGHTBRACE
   25        | SPLEFTBRACE InitVal InitValList SPRIGHTBRACE

   26 InitValList: %empty
   27            | SPCOMMA InitVal InitValList

   28 ArrayExps: %empty
   29          | OPLEFTBRACKET Exp OPRIGHTBRACKET ArrayExps

   30 Block: SPLEFTBRACE BlockItems SPRIGHTBRACE

   31 BlockItems: %empty
   32           | BlockItem BlockItems

   33 BlockItem: Decl
   34          | Stmt

   35 LVal: IDENTIFIER ArrayExps

   36 Stmt: LVal OPASSIGN Exp SPSEMICOLON
   37     | SPSEMICOLON
   38     | Exp SPSEMICOLON
   39     | Block
   40     | KEYIF OPLEFTPRNT Cond OPRIGHTPRNT Stmt
   41     | KEYIF OPLEFTPRNT Cond OPRIGHTPRNT Stmt KEYELSE Stmt
   42     | KEYWHILE OPLEFTPRNT Cond OPRIGHTPRNT Stmt
   43     | KEYBREAK SPSEMICOLON
   44     | KEYCONTINUE SPSEMICOLON
   45     | KEYRETURN SPSEMICOLON
   46     | KEYRETURN Exp SPSEMICOLON

   47 Cond: EqExp
   48     | Cond OPAND Cond
   49     | Cond OPOR Cond

   50 RelExp: Exp
   51       | RelExp OPLIGHT Exp
   52       | RelExp OPGREAT Exp
   53       | RelExp OPGREATEQ Exp
   54       | RelExp OPLIGHTEQ Exp

   55 EqExp: RelExp
   56      | EqExp OPEQUAL RelExp
   57      | EqExp OPNOTEQUAL RelExp

   58 Number: CONSTANTOCT
   59       | CONSTANTINTD
   60       | CONSTANTINTH

   61 FuncRParams: Exp Exps

   62 Exp: OPLEFTPRNT Exp OPRIGHTPRNT
   63    | LVal
   64    | STRING
   65    | Number
   66    | IDENTIFIER OPLEFTPRNT OPRIGHTPRNT
   67    | IDENTIFIER OPLEFTPRNT FuncRParams OPRIGHTPRNT
   68    | OPPLUS Exp
   69    | OPMINUS Exp
   70    | OPNOT Exp
   71    | Exp OPMULTIPLY Exp
   72    | Exp OPDIVIDE Exp
   73    | Exp OPMOD Exp
   74    | Exp OPPLUS Exp
   75    | Exp OPMINUS Exp

   76 Exps: %empty
   77     | SPCOMMA Exp Exps


Terminals, with rules where they appear

$end (0) 0
error (256)
SPSEMICOLON (258) 12 13 36 37 38 43 44 45 46
SPCOMMA (259) 10 15 22 27 77
SPDOT (260)
SPLEFTBRACE (261) 24 25 30
SPRIGHTBRACE (262) 24 25 30
OPLEFTPRNT (263) 5 6 40 41 42 62 66 67
OPRIGHTPRNT (264) 5 6 40 41 42 62 66 67
OPLEFTBRACKET (265) 8 18 29
OPRIGHTBRACKET (266) 8 18 29
OPPLUS (267) 68 74
OPMINUS (268) 69 75
OPMULTIPLY (269) 71
OPDIVIDE (270) 72
OPMOD (271) 73
OPASSIGN (272) 16 20 36
OPAND (273) 48
OPOR (274) 49
OPNOT (275) 70
OPEQUAL (276) 56
OPNOTEQUAL (277) 57
OPGREAT (278) 52
OPLIGHT (279) 51
OPGREATEQ (280) 53
OPLIGHTEQ (281) 54
TYPEVOID (282) 5
TYPEINTEGER (283) 6 7 8 12 13
KEYCONST (284) 12
KEYIF (285) 40 41
KEYELSE (286) 41
KEYWHILE (287) 42
KEYBREAK (288) 43
KEYCONTINUE (289) 44
KEYRETURN (290) 45 46
KEYGETINT (291)
KEYGETCHAR (292)
KEYGETARRAY (293)
KEYPUTINT (294)
KEYPUTCHAR (295)
KEYPUTARRAY (296)
KEYPUTF (297)
KEYSTOPTIME (298)
KEYSTARTTIME (299)
CONSTANTINTD (300) 59
CONSTANTINTH (301) 60
CONSTANTOCT (302) 58
STRING (303) 64
IDENTIFIER (304) 5 6 7 8 17 35 66 67


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
Compiler (51)
    on left: 1, on right: 0
CompUnits (52)
    on left: 2 3, on right: 1 3
CompUnit (53)
    on left: 4 5 6, on right: 3
FuncFParam (54)
    on left: 7 8, on right: 9 10
FuncFParams (55)
    on left: 9 10 11, on right: 5 6 10
Decl (56)
    on left: 12 13, on right: 4 33
ConstDefs (57)
    on left: 14 15, on right: 12 15
ConstDef (58)
    on left: 16, on right: 12 15
VarDec (59)
    on left: 17 18, on right: 16 18 19 20
VarDef (60)
    on left: 19 20, on right: 13 22
VarDefs (61)
    on left: 21 22, on right: 13 22
InitVal (62)
    on left: 23 24 25, on right: 16 20 25 27
InitValList (63)
    on left: 26 27, on right: 25 27
ArrayExps (64)
    on left: 28 29, on right: 8 29 35
Block (65)
    on left: 30, on right: 5 6 39
BlockItems (66)
    on left: 31 32, on right: 30 32
BlockItem (67)
    on left: 33 34, on right: 32
LVal (68)
    on left: 35, on right: 36 63
Stmt (69)
    on left: 36 37 38 39 40 41 42 43 44 45 46, on right: 34 40 41 42
Cond (70)
    on left: 47 48 49, on right: 40 41 42 48 49
RelExp (71)
    on left: 50 51 52 53 54, on right: 51 52 53 54 55 56 57
EqExp (72)
    on left: 55 56 57, on right: 47 56 57
Number (73)
    on left: 58 59 60, on right: 65
FuncRParams (74)
    on left: 61, on right: 67
Exp (75)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75, on right: 18
    23 29 36 38 46 50 51 52 53 54 61 62 68 69 70 71 72 73 74 75 77
Exps (76)
    on left: 76 77, on right: 61 77


State 0

    0 $accept: . Compiler $end

    TYPEVOID     shift, and go to state 1
    TYPEINTEGER  shift, and go to state 2
    KEYCONST     shift, and go to state 3

    $default  reduce using rule 2 (CompUnits)

    Compiler   go to state 4
    CompUnits  go to state 5
    CompUnit   go to state 6
    Decl       go to state 7


State 1

    5 CompUnit: TYPEVOID . IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block

    IDENTIFIER  shift, and go to state 8


State 2

    6 CompUnit: TYPEINTEGER . IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block
   13 Decl: TYPEINTEGER . VarDef VarDefs SPSEMICOLON

    IDENTIFIER  shift, and go to state 9

    VarDec  go to state 10
    VarDef  go to state 11


State 3

   12 Decl: KEYCONST . TYPEINTEGER ConstDef ConstDefs SPSEMICOLON

    TYPEINTEGER  shift, and go to state 12


State 4

    0 $accept: Compiler . $end

    $end  shift, and go to state 13


State 5

    1 Compiler: CompUnits .

    $default  reduce using rule 1 (Compiler)


State 6

    3 CompUnits: CompUnit . CompUnits

    TYPEVOID     shift, and go to state 1
    TYPEINTEGER  shift, and go to state 2
    KEYCONST     shift, and go to state 3

    $default  reduce using rule 2 (CompUnits)

    CompUnits  go to state 14
    CompUnit   go to state 6
    Decl       go to state 7


State 7

    4 CompUnit: Decl .

    $default  reduce using rule 4 (CompUnit)


State 8

    5 CompUnit: TYPEVOID IDENTIFIER . OPLEFTPRNT FuncFParams OPRIGHTPRNT Block

    OPLEFTPRNT  shift, and go to state 15


State 9

    6 CompUnit: TYPEINTEGER IDENTIFIER . OPLEFTPRNT FuncFParams OPRIGHTPRNT Block
   17 VarDec: IDENTIFIER .

    OPLEFTPRNT  shift, and go to state 16

    $default  reduce using rule 17 (VarDec)


State 10

   18 VarDec: VarDec . OPLEFTBRACKET Exp OPRIGHTBRACKET
   19 VarDef: VarDec .
   20       | VarDec . OPASSIGN InitVal

    OPLEFTBRACKET  shift, and go to state 17
    OPASSIGN       shift, and go to state 18

    $default  reduce using rule 19 (VarDef)


State 11

   13 Decl: TYPEINTEGER VarDef . VarDefs SPSEMICOLON

    SPCOMMA  shift, and go to state 19

    $default  reduce using rule 21 (VarDefs)

    VarDefs  go to state 20


State 12

   12 Decl: KEYCONST TYPEINTEGER . ConstDef ConstDefs SPSEMICOLON

    IDENTIFIER  shift, and go to state 21

    ConstDef  go to state 22
    VarDec    go to state 23


State 13

    0 $accept: Compiler $end .

    $default  accept


State 14

    3 CompUnits: CompUnit CompUnits .

    $default  reduce using rule 3 (CompUnits)


State 15

    5 CompUnit: TYPEVOID IDENTIFIER OPLEFTPRNT . FuncFParams OPRIGHTPRNT Block

    TYPEINTEGER  shift, and go to state 24

    $default  reduce using rule 11 (FuncFParams)

    FuncFParam   go to state 25
    FuncFParams  go to state 26


State 16

    6 CompUnit: TYPEINTEGER IDENTIFIER OPLEFTPRNT . FuncFParams OPRIGHTPRNT Block

    TYPEINTEGER  shift, and go to state 24

    $default  reduce using rule 11 (FuncFParams)

    FuncFParam   go to state 25
    FuncFParams  go to state 27


State 17

   18 VarDec: VarDec OPLEFTBRACKET . Exp OPRIGHTBRACKET

    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal    go to state 37
    Number  go to state 38
    Exp     go to state 39


State 18

   20 VarDef: VarDec OPASSIGN . InitVal

    SPLEFTBRACE   shift, and go to state 40
    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    InitVal  go to state 41
    LVal     go to state 37
    Number   go to state 38
    Exp      go to state 42


State 19

   22 VarDefs: SPCOMMA . VarDef VarDefs

    IDENTIFIER  shift, and go to state 21

    VarDec  go to state 10
    VarDef  go to state 43


State 20

   13 Decl: TYPEINTEGER VarDef VarDefs . SPSEMICOLON

    SPSEMICOLON  shift, and go to state 44


State 21

   17 VarDec: IDENTIFIER .

    $default  reduce using rule 17 (VarDec)


State 22

   12 Decl: KEYCONST TYPEINTEGER ConstDef . ConstDefs SPSEMICOLON

    SPCOMMA  shift, and go to state 45

    $default  reduce using rule 14 (ConstDefs)

    ConstDefs  go to state 46


State 23

   16 ConstDef: VarDec . OPASSIGN InitVal
   18 VarDec: VarDec . OPLEFTBRACKET Exp OPRIGHTBRACKET

    OPLEFTBRACKET  shift, and go to state 17
    OPASSIGN       shift, and go to state 47


State 24

    7 FuncFParam: TYPEINTEGER . IDENTIFIER
    8           | TYPEINTEGER . IDENTIFIER OPLEFTBRACKET OPRIGHTBRACKET ArrayExps

    IDENTIFIER  shift, and go to state 48


State 25

    9 FuncFParams: FuncFParam .
   10            | FuncFParam . SPCOMMA FuncFParams

    SPCOMMA  shift, and go to state 49

    $default  reduce using rule 9 (FuncFParams)


State 26

    5 CompUnit: TYPEVOID IDENTIFIER OPLEFTPRNT FuncFParams . OPRIGHTPRNT Block

    OPRIGHTPRNT  shift, and go to state 50


State 27

    6 CompUnit: TYPEINTEGER IDENTIFIER OPLEFTPRNT FuncFParams . OPRIGHTPRNT Block

    OPRIGHTPRNT  shift, and go to state 51


State 28

   62 Exp: OPLEFTPRNT . Exp OPRIGHTPRNT

    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal    go to state 37
    Number  go to state 38
    Exp     go to state 52


State 29

   68 Exp: OPPLUS . Exp

    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal    go to state 37
    Number  go to state 38
    Exp     go to state 53


State 30

   69 Exp: OPMINUS . Exp

    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal    go to state 37
    Number  go to state 38
    Exp     go to state 54


State 31

   70 Exp: OPNOT . Exp

    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal    go to state 37
    Number  go to state 38
    Exp     go to state 55


State 32

   59 Number: CONSTANTINTD .

    $default  reduce using rule 59 (Number)


State 33

   60 Number: CONSTANTINTH .

    $default  reduce using rule 60 (Number)


State 34

   58 Number: CONSTANTOCT .

    $default  reduce using rule 58 (Number)


State 35

   64 Exp: STRING .

    $default  reduce using rule 64 (Exp)


State 36

   35 LVal: IDENTIFIER . ArrayExps
   66 Exp: IDENTIFIER . OPLEFTPRNT OPRIGHTPRNT
   67    | IDENTIFIER . OPLEFTPRNT FuncRParams OPRIGHTPRNT

    OPLEFTPRNT     shift, and go to state 56
    OPLEFTBRACKET  shift, and go to state 57

    $default  reduce using rule 28 (ArrayExps)

    ArrayExps  go to state 58


State 37

   63 Exp: LVal .

    $default  reduce using rule 63 (Exp)


State 38

   65 Exp: Number .

    $default  reduce using rule 65 (Exp)


State 39

   18 VarDec: VarDec OPLEFTBRACKET Exp . OPRIGHTBRACKET
   71 Exp: Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp

    OPRIGHTBRACKET  shift, and go to state 59
    OPPLUS          shift, and go to state 60
    OPMINUS         shift, and go to state 61
    OPMULTIPLY      shift, and go to state 62
    OPDIVIDE        shift, and go to state 63
    OPMOD           shift, and go to state 64


State 40

   24 InitVal: SPLEFTBRACE . SPRIGHTBRACE
   25        | SPLEFTBRACE . InitVal InitValList SPRIGHTBRACE

    SPLEFTBRACE   shift, and go to state 40
    SPRIGHTBRACE  shift, and go to state 65
    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    InitVal  go to state 66
    LVal     go to state 37
    Number   go to state 38
    Exp      go to state 42


State 41

   20 VarDef: VarDec OPASSIGN InitVal .

    $default  reduce using rule 20 (VarDef)


State 42

   23 InitVal: Exp .
   71 Exp: Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp

    OPPLUS      shift, and go to state 60
    OPMINUS     shift, and go to state 61
    OPMULTIPLY  shift, and go to state 62
    OPDIVIDE    shift, and go to state 63
    OPMOD       shift, and go to state 64

    $default  reduce using rule 23 (InitVal)


State 43

   22 VarDefs: SPCOMMA VarDef . VarDefs

    SPCOMMA  shift, and go to state 19

    $default  reduce using rule 21 (VarDefs)

    VarDefs  go to state 67


State 44

   13 Decl: TYPEINTEGER VarDef VarDefs SPSEMICOLON .

    $default  reduce using rule 13 (Decl)


State 45

   15 ConstDefs: SPCOMMA . ConstDef ConstDefs

    IDENTIFIER  shift, and go to state 21

    ConstDef  go to state 68
    VarDec    go to state 23


State 46

   12 Decl: KEYCONST TYPEINTEGER ConstDef ConstDefs . SPSEMICOLON

    SPSEMICOLON  shift, and go to state 69


State 47

   16 ConstDef: VarDec OPASSIGN . InitVal

    SPLEFTBRACE   shift, and go to state 40
    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    InitVal  go to state 70
    LVal     go to state 37
    Number   go to state 38
    Exp      go to state 42


State 48

    7 FuncFParam: TYPEINTEGER IDENTIFIER .
    8           | TYPEINTEGER IDENTIFIER . OPLEFTBRACKET OPRIGHTBRACKET ArrayExps

    OPLEFTBRACKET  shift, and go to state 71

    $default  reduce using rule 7 (FuncFParam)


State 49

   10 FuncFParams: FuncFParam SPCOMMA . FuncFParams

    TYPEINTEGER  shift, and go to state 24

    $default  reduce using rule 11 (FuncFParams)

    FuncFParam   go to state 25
    FuncFParams  go to state 72


State 50

    5 CompUnit: TYPEVOID IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT . Block

    SPLEFTBRACE  shift, and go to state 73

    Block  go to state 74


State 51

    6 CompUnit: TYPEINTEGER IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT . Block

    SPLEFTBRACE  shift, and go to state 73

    Block  go to state 75


State 52

   62 Exp: OPLEFTPRNT Exp . OPRIGHTPRNT
   71    | Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp

    OPRIGHTPRNT  shift, and go to state 76
    OPPLUS       shift, and go to state 60
    OPMINUS      shift, and go to state 61
    OPMULTIPLY   shift, and go to state 62
    OPDIVIDE     shift, and go to state 63
    OPMOD        shift, and go to state 64


State 53

   68 Exp: OPPLUS Exp .
   71    | Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp

    OPMULTIPLY  shift, and go to state 62
    OPDIVIDE    shift, and go to state 63
    OPMOD       shift, and go to state 64

    $default  reduce using rule 68 (Exp)


State 54

   69 Exp: OPMINUS Exp .
   71    | Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp

    OPMULTIPLY  shift, and go to state 62
    OPDIVIDE    shift, and go to state 63
    OPMOD       shift, and go to state 64

    $default  reduce using rule 69 (Exp)


State 55

   70 Exp: OPNOT Exp .
   71    | Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp

    $default  reduce using rule 70 (Exp)


State 56

   66 Exp: IDENTIFIER OPLEFTPRNT . OPRIGHTPRNT
   67    | IDENTIFIER OPLEFTPRNT . FuncRParams OPRIGHTPRNT

    OPLEFTPRNT    shift, and go to state 28
    OPRIGHTPRNT   shift, and go to state 77
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal         go to state 37
    Number       go to state 38
    FuncRParams  go to state 78
    Exp          go to state 79


State 57

   29 ArrayExps: OPLEFTBRACKET . Exp OPRIGHTBRACKET ArrayExps

    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal    go to state 37
    Number  go to state 38
    Exp     go to state 80


State 58

   35 LVal: IDENTIFIER ArrayExps .

    $default  reduce using rule 35 (LVal)


State 59

   18 VarDec: VarDec OPLEFTBRACKET Exp OPRIGHTBRACKET .

    $default  reduce using rule 18 (VarDec)


State 60

   74 Exp: Exp OPPLUS . Exp

    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal    go to state 37
    Number  go to state 38
    Exp     go to state 81


State 61

   75 Exp: Exp OPMINUS . Exp

    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal    go to state 37
    Number  go to state 38
    Exp     go to state 82


State 62

   71 Exp: Exp OPMULTIPLY . Exp

    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal    go to state 37
    Number  go to state 38
    Exp     go to state 83


State 63

   72 Exp: Exp OPDIVIDE . Exp

    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal    go to state 37
    Number  go to state 38
    Exp     go to state 84


State 64

   73 Exp: Exp OPMOD . Exp

    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    LVal    go to state 37
    Number  go to state 38
    Exp     go to state 85


State 65

   24 InitVal: SPLEFTBRACE SPRIGHTBRACE .

    $default  reduce using rule 24 (InitVal)


State 66

   25 InitVal: SPLEFTBRACE InitVal . InitValList SPRIGHTBRACE

    SPCOMMA  shift, and go to state 86

    $default  reduce using rule 26 (InitValList)

    InitValList  go to state 87


State 67

   22 VarDefs: SPCOMMA VarDef VarDefs .

    $default  reduce using rule 22 (VarDefs)


State 68

   15 ConstDefs: SPCOMMA ConstDef . ConstDefs

    SPCOMMA  shift, and go to state 45

    $default  reduce using rule 14 (ConstDefs)

    ConstDefs  go to state 88


State 69

   12 Decl: KEYCONST TYPEINTEGER ConstDef ConstDefs SPSEMICOLON .

    $default  reduce using rule 12 (Decl)


State 70

   16 ConstDef: VarDec OPASSIGN InitVal .

    $default  reduce using rule 16 (ConstDef)


State 71

    8 FuncFParam: TYPEINTEGER IDENTIFIER OPLEFTBRACKET . OPRIGHTBRACKET ArrayExps

    OPRIGHTBRACKET  shift, and go to state 89


State 72

   10 FuncFParams: FuncFParam SPCOMMA FuncFParams .

    $default  reduce using rule 10 (FuncFParams)


State 73

   30 Block: SPLEFTBRACE . BlockItems SPRIGHTBRACE

    SPSEMICOLON   shift, and go to state 90
    SPLEFTBRACE   shift, and go to state 73
    OPLEFTPRNT    shift, and go to state 28
    OPPLUS        shift, and go to state 29
    OPMINUS       shift, and go to state 30
    OPNOT         shift, and go to state 31
    TYPEINTEGER   shift, and go to state 91
    KEYCONST      shift, and go to state 3
    KEYIF         shift, and go to state 92
    KEYWHILE      shift, and go to state 93
    KEYBREAK      shift, and go to state 94
    KEYCONTINUE   shift, and go to state 95
    KEYRETURN     shift, and go to state 96
    CONSTANTINTD  shift, and go to state 32
    CONSTANTINTH  shift, and go to state 33
    CONSTANTOCT   shift, and go to state 34
    STRING        shift, and go to state 35
    IDENTIFIER    shift, and go to state 36

    $default  reduce using rule 31 (BlockItems)

    Decl        go to state 97
    Block       go to state 98
    BlockItems  go to state 99
    BlockItem   go to state 100
    LVal        go to state 101
    Stmt        go to state 102
    Number      go to state 38
    Exp         go to state 103


State 74

    5 CompUnit: TYPEVOID IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block .

    $default  reduce using rule 5 (CompUnit)


State 75

    6 CompUnit: TYPEINTEGER IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block .

    $default  reduce using rule 6 (CompUnit)


State 76

   62 Exp: OPLEFTPRNT Exp OPRIGHTPRNT .

    $default  reduce using rule 62 (Exp)


State 77

   66 Exp: IDENTIFIER OPLEFTPRNT OPRIGHTPRNT .

    $default  reduce using rule 66 (Exp)


State 78

   67 Exp: IDENTIFIER OPLEFTPRNT FuncRParams . OPRIGHTPRNT

    OPRIGHTPRNT  shift, and go to state 104


State 79

   61 FuncRParams: Exp . Exps
   71 Exp: Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp

    SPCOMMA     shift, and go to state 105
    OPPLUS      shift, and go to state 60
    OPMINUS     shift, and go to state 61
    OPMULTIPLY  shift, and go to state 62
    OPDIVIDE    shift, and go to state 63
    OPMOD       shift, and go to state 64

    $default  reduce using rule 76 (Exps)

    Exps  go to state 106


State 80

   29 ArrayExps: OPLEFTBRACKET Exp . OPRIGHTBRACKET ArrayExps
   71 Exp: Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp

    OPRIGHTBRACKET  shift, and go to state 107
    OPPLUS          shift, and go to state 60
    OPMINUS         shift, and go to state 61
    OPMULTIPLY      shift, and go to state 62
    OPDIVIDE        shift, and go to state 63
    OPMOD           shift, and go to state 64


State 81

   71 Exp: Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   74    | Exp OPPLUS Exp .
   75    | Exp . OPMINUS Exp

    OPMULTIPLY  shift, and go to state 62
    OPDIVIDE    shift, and go to state 63
    OPMOD       shift, and go to state 64

    $default  reduce using rule 74 (Exp)


State 82

   71 Exp: Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp
   75    | Exp OPMINUS Exp .

    OPMULTIPLY  shift, and go to state 62
    OPDIVIDE    shift, and go to state 63
    OPMOD       shift, and go to state 64

    $default  reduce using rule 75 (Exp)


State 83

   71 Exp: Exp . OPMULTIPLY Exp
   71    | Exp OPMULTIPLY Exp .
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp

    $default  reduce using rule 71 (Exp)


State 84

   71 Exp: Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   72    | Exp OPDIVIDE Exp .
   73    | Exp . OPMOD Exp
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp

    $default  reduce using rule 72 (Exp)


State 85

   71 Exp: Exp . OPMULTIPLY Exp
   72    | Exp . OPDIVIDE Exp
   73    | Exp . OPMOD Exp
   73    | Exp OPMOD Exp .
   74    | Exp . OPPLUS Exp
   75    | Exp . OPMINUS Exp

    $default  reduce using rule 73 (Exp)


State 86

   27 InitValList: SPCOMMA . InitVal InitValList
